--- a/index.html
+++ b/index.html
@@ -7,6 +7,88 @@
     <title>Nicole Hill</title>
 </head>
 <body>
+    <!-- Navigation -->
+    <header>
+    <nav>
+        <ul>
+            <li>About Me</li>
+            <li>Projects</li>
+            <li>Skills</li>
+            <li>Resume</li>
+            <li>Contact</li>
+        </ul>
+    </nav>
+    <!-- Banner -->
+    <h4>Hello</h4>
     <h1>I'm Nicole Hill</h1>
+    <h5>Electronics Engineer entering into the world of Web3 development.</h5>
+    <p class="aboutMeButton">About Me ↓</p>
+    <img id="profile" src="resources\images\profilePhoto.png">
+</header>
+<main>
+    <!-- About Me -->
+    <section class="about-me">
+        <img id="aboutMePhoto" src="resources\images\aboutMePhoto.png">
+        <h2>About Me</h2>
+         <p>I graduated from the Pennsylvania State University with a bachelors degree
+            in Electrical Engineering as a Schreyers Honors Student. My industry 
+            experience includes the title of systems engineer, embedded systems engineer 
+            and electronics engineer with a focus on electronic circuit design and 
+            signal integrity.
+         <br>
+            I am a self-taught web developer looking to enter into the world of Web3 and 
+            this online portfolio hihglights my journey, my accomplishments, and my personal 
+            projects. In my free time I enjoy completing different coding projects and 
+            creating educational content that teaches people about cryptocurrencies and 
+            Web3. When I am away from the computer, I am outdoors hiking, or reading books
+            about personal developementor technology.</p>
+    </section>
+    <!-- Skills -->
+    <section class="skills">
+        <h2>Skills</h2>
+        <h3>Engineering:</h3>
+            <ul>
+                <li>Oscilloscope</li>
+                <li>Power Meter</li>
+                <li>Function Generator</li>
+                <li>Spectrum Analyzer</li>
+                <li>Board Assembly</li>
+                <li>TDR</li>
+                <li>VNA</li>
+            </ul>
+        <h3>Software:</h3>
+            <ul>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>JavaScript</li>
+                <li>Git/GitHub</li>
+                <li>MATLab</li>
+                <li>PSpice</li>
+                <li>Hyperlynx</li>
+                <li>Zuken</li>
+            </ul>
+    </section>
+    <!-- Projects -->
+    <section class="projects">
+        <h1>Projects</h1>
+        <h3>→ EMG Controlled Robotic Arm</h3>
+            <section class="emg-robot">
+                <img id="robotPhoto" src="resources\images\roboticArm.PNG">
+                <img id="emgCircuit" src="resources\images\emgCircuit.PNG">
+                <p>I designed the electromyography (EMG) circuit to take the voltages produced 
+                    in a muscle, and convert it into information that can be read by a microcontroller 
+                    or computer in order to move a robotic arm. The voltages in the muscle are very small 
+                    (0-10 millivolts). The EMG circuit takes this small, AC signal, amplifies it, filters 
+                    it to eliminate noise, and rectifies the signal to convert it into a positive DC voltage 
+                    that a computer can understand. This research project works specifically on the bicep 
+                    muscle and was completed as my senior and honors Capstone project at Penn State.</p>
+            </section>
+        <h3>→ Daily Motivational Website</h3>
+            <section>
+                <!-- Add info once project is complete -->
+            </section>
+    </section>
+</main>
+
 </body>
 </html>
