adding contact page

--- a/index.html
+++ b/index.html
@@ -9,17 +9,20 @@
 </head>
 <body>
     <!-- Navigation -->
-<header>
-    <nav>
-        <ul class="navbar">
-            <li><a href="#aboutMe">About Me</a></li>
-            <li><a href="#skills">Skills</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li>Certificates</li>
-            <li>Resume</li>
-            <li id="contact">Contact</li>
-        </ul>
-    </nav>
+    <header>
+        <nav>
+            <a src="index.html"> <img id="logo" src="resources\images\NHLogo.png"></a>
+            <ul class="navbar">
+                <li><a href="#aboutMe">About Me</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li>Certificates</li>
+                <li>Resume</li>
+                <li id="contact"><a href="contact.html"> Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
     <!-- Banner -->
     <section class="banner">
         <div class="greeting-text">
@@ -33,7 +36,6 @@
             <img id="profile" src="resources\images\profilePhoto.png">
         </div>
     </section>
-</header>
 <main>
     <!-- About Me -->
     <section class="aboutMe">
