adding certificates and resume pages

--- a/contact.html
+++ b/contact.html
@@ -16,15 +16,15 @@
                 <li><a href="index.html#aboutMe">About Me</a></li>
                 <li><a href="index.html#skills">Skills</a></li>
                 <li><a href="index.html#projects">Projects</a></li>
-                <li><a>Certificates</a></li>
-                <li><a>Resume</a></li>
+                <li><a href="certificates.html">Certificates</a></li>
+                <li><a href="resume.html">Resume</a></li>
                 <li id="contact" class="contact"><a href="contact.html"> Contact</a> </li>
             </ul>
         </nav>
     </header>
     <main>
 
-        <h1 class="contactHeading">Contact</h1>
+        <h1 class="contact-h1">Contact</h1>
         <section class="contactPage">
             <div class="contactForm">
             <br>
