--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
                 <li><a href="#aboutMe">About Me</a></li>
                 <li><a href="#skills">Skills</a></li>
                 <li><a href="#projects">Projects</a></li>
-                <li>Certificates</li>
-                <li>Resume</li>
+                <li><a href="certificates.html">Certificates</a></li>
+                <li><a href="resume.html">Resume</a></li>
                 <li id="contact"><a href="contact.html"> Contact</a></li>
             </ul>
         </nav>
