--- a/index.html
+++ b/index.html
@@ -12,15 +12,27 @@
     <!-- Navigation -->
     <header>
         <nav>
-            <a src="index.html"> <img id="logo" src="resources\images\NHLogo.png"></a>
+        <!-- Desktop Navigation -->
+        <div class="desktop-nav">
+            <a href="index.html#banner"><img id="logo" src="resources\images\NHLogo.png"></a>
             <ul class="navbar">
-                <li><a href="#aboutMe">About Me</a></li>
-                <li><a href="#skills">Skills</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="certificates.html">Certificates</a></li>
-                <li><a href="resume.html">Resume</a></li>
+                <li id="aboutMeNav"><a href="#aboutMe">About Me</a></li>
+                <li id="skillsNav"><a href="#skills">Skills</a></li>
+                <li id="projectsNav"><a href="#projects">Projects</a></li>
+                <li id="certificatesNav"><a href="certificates.html">Certificates</a></li>
+                <li id="resumeNav"><a href="resume.html">Resume</a></li>
                 <li id="contact"><a href="contact.html"> Contact</a></li>
             </ul>
+        </div>
+        <!-- Mobile Navigation -->
+        <div class="mobile-nav">
+            <a href="index.html#banner"><img id="logo" src="resources\images\NHLogo.png"></a>
+            <ul class="navbar">
+                <li id="certificatesNav"><a href="certificates.html">Certificates</a></li>
+                <li id="resumeNav"><a href="resume.html">Resume</a></li>
+                <li id="contact"><a href="contact.html"> Contact</a></li>
+            </ul>
+        </div>
         </nav>
     </header>
 
@@ -30,7 +42,7 @@
             <p class="hello">Hello,</p>
             <h1>I'm Nicole Hill</h1>
             <h5>Electronics Engineer entering into the world of Web3 development.</h5>
-            <p class="aboutMeButton"><a href="#aboutMe">About Me ↓</a></p>
+            <p class="aboutMeButton"><a href="#aboutMe"> About Me ↓</a></p>
         </div>
 
         <div class="greeting-img">
@@ -40,6 +52,7 @@
 <main>
     <!-- About Me -->
     <section class="aboutMe">
+            <h2 id="aboutMeSmallDevices">About Me</h2>
             <img id="aboutMePhoto" src="resources\images\aboutMePhoto.png" alt="Nicole Hill">
 
         <div class="aboutMeText">
@@ -52,7 +65,7 @@
                 <br>
                 <br>
                     I am a self-taught web developer looking to enter into the world of Web3 and 
-                    this online portfolio hihglights my journey, my accomplishments, and my personal 
+                    this online portfolio highlights my journey, my accomplishments, and my personal 
                     projects. In my free time I enjoy completing different coding projects and 
                     creating educational content that teaches people about cryptocurrencies and 
                     Web3. When I am away from the computer, I am outdoors hiking, or reading books
