updating JS code

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <p class="hello">Hello,</p>
             <h1>I'm Nicole Hill</h1>
             <h5>Electronics Engineer entering into the world of Web3 development.</h5>
-            <p class="aboutMeButton"><a href="#aboutMe"> About Me ↓</a></p>
+            <button class="aboutMeButton"><a href="#aboutMe"> About Me ↓</a></button>
         </div>
 
         <div class="greeting-img">
@@ -69,7 +69,7 @@
                     projects. In my free time I enjoy completing different coding projects and 
                     creating educational content that teaches people about cryptocurrencies and 
                     Web3. When I am away from the computer, I am outdoors hiking, or reading books
-                    about personal developementor technology.</p>
+                    about personal developement or technology.</p>
         </div>
     </section>
     <hr>
